--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "mqtt:clear": "node scripts/clear-retained.cjs --broker mqtt://localhost:1883 --home home1 --from-backend http://localhost:4000",
-    "export:ui-review": "node scripts/export-pdf.cjs --in docs/ui-review.html --out docs/ui-review.pdf"
+    "export:ui-review": "node scripts/export-pdf.cjs --in docs/ui-review.html --out docs/ui-review.pdf",
+    "sim": "node test-simulator.cjs --broker mqtt://localhost:1883 --home home1",
+    "sim:retain": "node test-simulator.cjs --broker mqtt://localhost:1883 --home home1 --retain"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
