--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,7 +1,5 @@
-# copy to .env and set real secrets in production
 PORT=4000
 NODE_ENV=development
-JWT_SECRET=change_me_in_prod
-COOKIE_NAME=smarthome_token
 CORS_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
+JWT_SECRET=change_me
 CSRF_PROTECT=false
