--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.1.0",
-  "description": "Smart Home backend",
+  "description": "Smart Home backend (fresh reset)",
   "main": "server.cjs",
   "type": "commonjs",
   "scripts": {
@@ -12,13 +12,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "express-rate-limit": "^7.4.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mqtt": "^5.10.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
