--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -3,3 +3,4 @@ NODE_ENV=development
 CORS_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
 JWT_SECRET=change_me
 CSRF_PROTECT=false
+DEFAULT_TEMP_PASSWORD=test123
