--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -4,3 +4,10 @@ CORS_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
 JWT_SECRET=change_me
 CSRF_PROTECT=false
 DEFAULT_TEMP_PASSWORD=test123
+
+# MQTT Configuration
+MQTT_BROKER_URL=mqtt://localhost:1883
+HOME_ID=home1
+
+# Rule Engine Configuration
+RULE_EVAL_INTERVAL_MS=30000
