--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,1 +1,12 @@
 ".env" 
+".env.example"
+# Create comprehensive .gitignore
+echo ".env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.log
+node_modules/
+dist/
+.DS_Store" > .gitignore
